# RECOVER

./: .gitignore  BENCHMARKING_STEPS.md  BENCHMARKING_STEPS_v2.docx  BENCHMARKING_STEPS_v2.md  CLAUDE.md  DOC_TRAJECTORY_ANALYSIS.md  DUCKDB_WORKFLOW.md  README.md  Variables.ipynb  check.py  count_points.py  ecosystem_condition_2022.ipynb  failed_cells.csv  fscs_samples.csv  fscs_samples.dbf  fscs_samples.shp  fscs_samples.shx  landsat_ts_explorer.js  main.py  pyproject.toml  tmp_query.py
.claude/: settings.local.json
data/: extracted_indices.csv.checkpoint.json  extracted_natural_labels.csv.checkpoint.json  selected_features.txt  trajectory_classification_30m.json  trajectory_classification_30m.tif.aux.xml
models/locart/: locart_NBR.pkl  locart_NDMI.pkl  locart_NDWI.pkl
models/locart_comparison/: best_model_NBR_LO-CART.pkl  best_model_NDMI_LO-CART.pkl  best_model_NDWI_LO-CART.pkl
notebooks/: HCASv3_3.ipynb  ecosystem_condition_2013.ipynb  ecosystem_condition_2022.ipynb  explore28102025.ipynb  explore_trajectories.ipynb  feature_selection.ipynb  hcas_extraction.ipynb  utils.ipynb  visualize_clusters.ipynb
reports/: pipeline_reference.md  recovery_assessment_guide.docx  recovery_assessment_guide.html  recovery_assessment_guide.md  recovery_assessment_narrative.md  recovery_assessment_narrative_v2.md  recovery_assessment_paper_draft.md  trajectory_and_recovery_methodology.md  trajectory_recovery_report.md
scripts/: EXTRACTION_METHODOLOGY.md  abandoned_ag_extract.py  apply_locart.py  evaluate_model.py  gee_extraction.py  gee_extraction_binary.py  plot_benchmarking_results.py  predict_reference_conditions.py  select_benchmark_sites.py  test_extraction.py  train_regression_model.py
(+73 files in other folders)
