[project]
name = "recover"
version = "0.1.0"
description = "Ecosystem Condition and Recovery Modeling"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "G. Singh", email = "geethen.singh@gmail.com"}
]
dependencies = [
    "black>=26.3.1",
    "dask[complete]>=2026.3.0",
    "distributed>=2026.3.0",
    "duckdb>=1.5.2",
    "earthengine-api>=1.7.22",
    "fiona>=1.10.1",
    "geemap>=0.37.2",
    "geopandas>=1.1.3",
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "planetary-computer>=1.0.0",
    "pyarrow>=23.0.1",
    "pyproj>=3.7.2",
    "pystac-client>=0.9.0",
    "rasterio>=1.5.0",
    "rioxarray>=0.22.0",
    "ruff>=0.15.10",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
    "tabicl[all]>=2.0.1",
    "tabpfn>=7.1.1",
    "torch>=2.11.0",
    "torchgeo>=0.9.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
    "wandb",
    "xarray>=2026.4.0",
    "xgboost>=3.2.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
